--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
         "lint:fix": "eslint . --ignore-path .gitignore --ext .ts --fix"
     },
     "dependencies": {
-        "luaparse": "^0.3.1",
+        "luaparse": "file:plugins/luaparse",
         "printj": "^1.3.1"
     },
     "devDependencies": {
-        "@types/luaparse": "^0.2.9",
+        "@types/luaparse": "file:plugins/@types/luaparse",
         "@types/node": "^12.12.11",
         "@typescript-eslint/eslint-plugin": "^2.8.0",
         "@typescript-eslint/parser": "^2.8.0",
